@startuml
allowmixing

class Post {
    - id: int
    - header: string
    - title: string
    - author: string
    - image: string
    - body: text
    - date: date
    + getId(): int
    + getTitle(): string
    + setTitle(title: string): void
    + getHeader(): string
    + getAuthor(): string
    + getImage(): string
    + getBody(): text
    + getDate(): date
}

class PostManager {
    - posts: Post[]
    + getPosts(): Post[]
    + addPost(post: Post): void
    + getPostsFromDb(): void
}

class Model {
    {static} - pdo: PDO
    {static} + setBdd(): void
    + getBdd(): PDO
}

class BlogController {
    - postManager: PostManager
    + displayPosts(): void
}



package "Views" {
    component template
    component index
}


PostManager -- "*" Post : contains
PostManager -up-|> Model : extends

BlogController -right-> PostManager : uses
BlogController ..> index : displays >>

template <|-- index

@enduml
